# Flint

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile.template  Makefile  README.md  Vagrantfile  configure.sh  main.c  main.cpp  resin-sync.yml
.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders
libs/: CMakeLists.txt
libs/application/: CMakeLists.txt  application.c  application.cpp  application.h  application_util.c  application_util.cpp
libs/application/include/flint/application/: application.h
libs/application/src/: application.cpp
libs/debug/: debug.h
libs/kernel/: CMakeLists.txt  defines.h  kernel.c  kernel.cpp  kernel.h  kernel_util.c  kernel_util.cpp
libs/kernel/include/flint/kernel/: defines.h  kernel.h
libs/kernel/src/: kernel.cpp
libs/network/: CMakeLists.txt  network.c  network.cpp  network.h  network_util.c  network_util.cpp
libs/network/include/flint/network/: network.h
libs/network/src/: network.cpp
libs/utils/: CMakeLists.txt
libs/utils/include/flint/utils/: debug.h
libs/utils/src/: debug.cpp
src/: main.cpp
tests/: CMakeLists.txt
tests/manual/: CMakeLists.txt  simple_tester.cpp
tests/unit/: CMakeLists.txt  testing_test_framework.cpp
